@@ -7,3 +7,4 @@
 <!ENTITY change-gpg-path-button "Setting GPG's path">
 <!ENTITY change-gpg-path-checkbox "Manually specify the path of GPG:">
 <!ENTITY result-always-in-new-window "Always display the result of an encoding or a signature in new window.">
+<!ENTITY no-gpg-agent-checkbox "Force to turn off gpg's agent (can fix some errors)">
